Enforcing code style on build is no longer experimental
See https://github.com/dotnet/roslyn/issues/66788

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/CodeAnalysisPropertyPage.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/CodeAnalysisPropertyPage.xaml
@@ -34,7 +34,7 @@
                 Category="AllAnalyzers" />
 
   <BoolProperty Name="EnforceCodeStyleInBuild"
-                DisplayName="Enforce code style on build (experimental)"
+                DisplayName="Enforce code style on build"
                 Description="Produce diagnostics about code style on build."
                 HelpUrl="https://go.microsoft.com/fwlink/?linkid=2172995"
                 Category="NetAnalyzers" />
