Warn if build accelerated without reference assemblies
Build acceleration relies heavily upon the presence of reference assemblies. If a referenced project does not produce a reference assembly, we will be unable to accelerate the case where that referenced project had a private (non public-API) change.

This change introduces a log message when we detect this scenario, directing the user to consider a change that would improve their incremental build performance.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/ConfigurationGeneral.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/ConfigurationGeneral.xaml
@@ -164,6 +164,9 @@
   <StringProperty Name="Platform"
                   Visible="False" />
 
+  <StringProperty Name="ProduceReferenceAssembly"
+                  Visible="False" />
+
   <StringProperty Name="ProjectAssetsFile"
                   ReadOnly="true"
                   Visible="False" />
