Move the Resources category to the base file, and let the C# extend and replace it.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/ApplicationPropertyPage.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/ApplicationPropertyPage.xaml
@@ -11,6 +11,10 @@
     <Category Name="General"
               DisplayName="General"
               Description="General settings for the application." />
+
+    <Category Name="Resources"
+              DisplayName="Resources"
+              Description="Resource settings for the application." />
   </Rule.Categories>
 
   <Rule.DataSource>
@@ -78,7 +82,8 @@
   </StringProperty>
 
   <StringProperty Name="InstallOtherFrameworks"
-                  DisplayName="Install other frameworks">
+                  DisplayName="Install other frameworks"
+                  Category="General">
     <StringProperty.DataSource>
       <DataSource PersistedName="InstallOtherFrameworks"
                   Persistence="ProjectFileWithInterception"
