Text-wrap by default for command line arguments (#8893)
* text wrap launch profile command line arguments

* Document new metadata property

* Update docs/repo/property-pages/property-specification.md

Co-authored-by: Drew Noakes <git@drewnoakes.com>

* Update ExecutableDebugPropertyPage.xaml CommandLineArguments property to multilnie

* Update XLF

---------

Co-authored-by: Drew Noakes <git@drewnoakes.com>

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/ExecutableDebugPropertyPage.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/ExecutableDebugPropertyPage.xaml
@@ -31,7 +31,16 @@
 
   <StringProperty Name="CommandLineArguments"
                   DisplayName="Command line arguments"
-                  Description="Command line arguments to pass to the executable." />
+                  Description="Command line arguments to pass to the executable. You may break arguments into multiple lines.">
+    <StringProperty.ValueEditors>
+      <ValueEditor EditorType="MultiLineString">
+        <ValueEditor.Metadata>
+          <NameValuePair Name="UseMonospaceFont" Value="True" />
+          <NameValuePair Name="TextWrapping" Value="Wrap" />
+        </ValueEditor.Metadata>
+      </ValueEditor>
+    </StringProperty.ValueEditors>
+  </StringProperty>
 
   <StringProperty Name="WorkingDirectory"
                   DisplayName="Working directory"
