--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/ProjectDebugPropertyPage.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/ProjectDebugPropertyPage.xaml
@@ -31,6 +31,7 @@
       <ValueEditor EditorType="MultiLineString">
         <ValueEditor.Metadata>
           <NameValuePair Name="UseMonospaceFont" Value="True" />
+          <NameValuePair Name="TextWrapping" Value="Wrap" />
         </ValueEditor.Metadata>
       </ValueEditor>
     </StringProperty.ValueEditors>
