Remove the selected startup object value (if any) from the enum value list for the splash screen dropdown. For this, we added the StartupObject property to the ConfigurationGeneral rule file to track it.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/ConfigurationGeneral.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/ConfigurationGeneral.xaml
@@ -226,6 +226,9 @@
     </BoolProperty.DataSource>
   </BoolProperty>
 
+  <StringProperty Name="StartupObject"
+                  Visible="False" />
+
   <StringProperty Name="SupportedMyApplicationTypes"
                   ReadOnly="True"
                   Visible="False" />
