Parse targetFrameworkAlias into a double to check if it's higher than 5 instead of doing a string comparison. Also, include validating if the UseWinUI property is set when determining if the winforms platform value is needed in the target framework value.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/ConfigurationGeneral.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/ConfigurationGeneral.xaml
@@ -336,6 +336,9 @@
 
   <BoolProperty Name="UseWindowsForms"
                 Visible="False" />
+  
+  <BoolProperty Name="UseWinUI"
+                Visible="False" />
 
   <BoolProperty Name="UseWPF"
                 Visible="False" />
