allow list the WindowsTargetPlatformMinVersion property

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/NuGetRestore.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/NuGetRestore.xaml
@@ -198,4 +198,8 @@
                   ReadOnly="True"
                   Visible="False" />
 
+  <StringProperty Name="WindowsTargetPlatformMinVersion"
+                  ReadOnly="True"
+                  Visible="False" />
+
 </Rule>
