Warn when StartArguments conflict with launchSettings.json
When command line arguments for launch are present in both the `launchSettings.json` file and the `StartArguments` MSBuild property, the latter wins. Yet the former is the more visible in the UI, and this leads to confusion. It's not clear why the value specified in the UI is not being picked up during debugging.

This change adds a warning in that UI when the StartArguments property is non-empty, which explains the issue to the user and allows them to fix it if they want to.

> ⚠️ WARNING! This project defines the StartArguments MSBuild property, which overrides any command line arguments specified here. If you wish to define arguments here, you must remove that property from your MSBuild project. Note that it may be defined in a .user file.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/ExecutableDebugPropertyPage.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/ExecutableDebugPropertyPage.xaml
@@ -10,10 +10,10 @@
 
   <Rule.Metadata>
     <sys:String x:Key="CommandName">Executable</sys:String>
-    
+
     <!-- KnownImageIds.ImageCatalogGuid -->
     <sys:Guid x:Key="ImageMonikerGuid">AE27A6B0-E345-4288-96DF-5EAF394EE369</sys:Guid>
-    
+
     <!-- KnownImageIds.Execute -->
     <sys:Int32 x:Key="ImageMonikerId">1173</sys:Int32>
   </Rule.Metadata>
@@ -40,6 +40,32 @@
         </ValueEditor.Metadata>
       </ValueEditor>
     </StringProperty.ValueEditors>
+  </StringProperty>
+
+  <StringProperty Name="StartArguments" Visible="False" ReadOnly="True">
+    <StringProperty.DataSource>
+      <DataSource Persistence="ProjectFile"
+                  SourceOfDefaultValue="AfterContext"
+                  HasConfigurationCondition="False" />
+    </StringProperty.DataSource>
+  </StringProperty>
+
+  <StringProperty Name="CommandLineArgumentsOverriddenWarning"
+                  DisplayName="Ignored"
+                  Description="⚠️ WARNING! This project defines the StartArguments MSBuild property, which overrides any command line arguments specified here. If you wish to define arguments here, you must remove that property from your MSBuild project. Note that it may be defined in a .user file.">
+    <StringProperty.DataSource>
+      <DataSource PersistedName="CommandLineArgumentsOverriddenWarning"
+                  Persistence="ProjectFileWithInterception"
+                  HasConfigurationCondition="False" />
+    </StringProperty.DataSource>
+    <StringProperty.ValueEditors>
+      <ValueEditor EditorType="Description" />
+    </StringProperty.ValueEditors>
+    <StringProperty.Metadata>
+      <NameValuePair Name="VisibilityCondition">
+        <NameValuePair.Value>(ne (unevaluated "Executable" "StartArguments") "")</NameValuePair.Value>
+      </NameValuePair>
+    </StringProperty.Metadata>
   </StringProperty>
 
   <StringProperty Name="WorkingDirectory"
