--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/ProjectDebugPropertyPage.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/ProjectDebugPropertyPage.xaml
@@ -37,6 +37,32 @@
     </StringProperty.ValueEditors>
   </StringProperty>
 
+  <StringProperty Name="StartArguments" Visible="False" ReadOnly="True">
+    <StringProperty.DataSource>
+      <DataSource Persistence="ProjectFile"
+                  SourceOfDefaultValue="AfterContext"
+                  HasConfigurationCondition="False" />
+    </StringProperty.DataSource>
+  </StringProperty>
+
+  <StringProperty Name="CommandLineArgumentsOverriddenWarning"
+                  DisplayName="Ignored"
+                  Description="⚠️ WARNING! This project defines the StartArguments MSBuild property, which overrides any command line arguments specified here. If you wish to define arguments here, you must remove that property from your MSBuild project. Note that it may be defined in a .user file.">
+    <StringProperty.DataSource>
+      <DataSource PersistedName="CommandLineArgumentsOverriddenWarning"
+                  Persistence="ProjectFileWithInterception"
+                  HasConfigurationCondition="False" />
+    </StringProperty.DataSource>
+    <StringProperty.ValueEditors>
+      <ValueEditor EditorType="Description" />
+    </StringProperty.ValueEditors>
+    <StringProperty.Metadata>
+      <NameValuePair Name="VisibilityCondition">
+        <NameValuePair.Value>(ne (unevaluated "Project" "StartArguments") "")</NameValuePair.Value>
+      </NameValuePair>
+    </StringProperty.Metadata>
+  </StringProperty>
+
   <StringProperty Name="WorkingDirectory"
                   DisplayName="Working directory"
                   Description="Path to the working directory where the process will be started."
@@ -89,7 +115,7 @@
       </NameValuePair>
     </BoolProperty.Metadata>
   </BoolProperty>
-  
+
   <BoolProperty Name="NativeDebugging"
                 DisplayName="Enable native code debugging"
                 Description="Enable debugging for managed and native code together, also known as mixed-mode debugging." />
