Update conditions to show Native AOT properties.
I have changed the project capability condition to include _NativeAOTProperties_ to projects targeting .NET 8 or higher. We later exclude/include class libraries when checking the visibility condition:
The _IsTrimmable_ and _IsAotCompatible_ properties should only be shown to class library projects.
The _Trimming_ and _PublishAot_ properties should not be shown to class library projects.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/BuildPropertyPage.xaml
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/BuildPropertyPage.xaml
@@ -196,7 +196,11 @@
     </BoolProperty.DataSource>
     <BoolProperty.Metadata>
       <NameValuePair Name="VisibilityCondition">
-        <NameValuePair.Value>(and (has-net-core-app-version-or-greater "8.0") (has-project-capability "NativeAOTProperties"))</NameValuePair.Value>
+        <NameValuePair.Value>
+          (and
+          (has-project-capability "NativeAOTProperties")
+          (has-evaluated-value "Application" "OutputType" "Library"))
+        </NameValuePair.Value>
       </NameValuePair>
     </BoolProperty.Metadata>
   </BoolProperty>
@@ -212,7 +216,11 @@
     </BoolProperty.DataSource>
     <BoolProperty.Metadata>
       <NameValuePair Name="VisibilityCondition">
-        <NameValuePair.Value>(and (has-net-core-app-version-or-greater "8.0") (has-project-capability "NativeAOTProperties"))</NameValuePair.Value>
+        <NameValuePair.Value>
+          (and
+          (has-project-capability "NativeAOTProperties")
+          (has-evaluated-value "Application" "OutputType" "Library"))
+        </NameValuePair.Value>
       </NameValuePair>
     </BoolProperty.Metadata>
   </BoolProperty>
@@ -424,7 +432,7 @@
                DisplayName="When the output is updated" />
   </EnumProperty>
 
-  <!-- These Native AOT properties should not be visible for WPF, WinForms, MAUI or class library projects. -->
+  <!-- These Native AOT properties should not be visible for class library projects. -->
   <DynamicEnumProperty Name="Trimming"
                 DisplayName="Trimming"
                 Description="Select the desired .NET trimming option for optimizing your application's deployment size and performance."
@@ -440,10 +448,8 @@
       <NameValuePair Name="VisibilityCondition">
         <NameValuePair.Value>
           (and
-            (has-net-core-app-version-or-greater "8.0")
-            (and
-               (not (has-evaluated-value "Application" "UseWindowsForms" true))
-               (not (has-evaluated-value "Application" "UseWPF" true))))
+          (has-project-capability "NativeAOTProperties")
+          (not (has-evaluated-value "Application" "OutputType" "Library")))
         </NameValuePair.Value>
       </NameValuePair>
     </DynamicEnumProperty.Metadata>
@@ -461,10 +467,8 @@
       <NameValuePair Name="VisibilityCondition">
         <NameValuePair.Value>
           (and
-            (has-net-core-app-version-or-greater "8.0")
-            (and
-               (not (has-evaluated-value "Application" "UseWindowsForms" true))
-               (not (has-evaluated-value "Application" "UseWPF" true))))
+          (has-project-capability "NativeAOTProperties")
+          (not (has-evaluated-value "Application" "OutputType" "Library")))
         </NameValuePair.Value>
       </NameValuePair>
     </BoolProperty.Metadata>
